<resources>
    <string name="app_name">Pasta de Músicas</string>
    <string name="dev_name">Matheus Camargo</string>
    <string name="dev_credits">%1$s | %2$s (%3$d) %4$s</string>

    <string name="all_song_sharing_text">Músicas do Pasta de Músicas</string>
    <string name="all_song">Música</string>
    <string name="all_ok">OK</string>
    <string name="all_save">Salvar</string>
    <string name="all_cancel">Cancelar</string>
    <string name="all_share">Compartilhar</string>
    <string name="all_delete">Excluir</string>
    <string name="all_keep">Manter</string>

    <!--  Song List -->
    <string name="list_go_to_song">Ver música</string>
    <string name="list_search">Buscar</string>
    <string name="list_search_query_hint">Título, artista, letra…</string>
    <string name="list_selection_action_mode_share_preparing">Preparando…</string>
    <string name="list_selection_action_mode_share_failure">Falha ao compartilhar músicas.</string>
    <string name="list_selection_action_mode_select_all">Selecionar todas</string>
    <plurals name="list_selection_action_mode_title">
        <item quantity="one">%1$d selecionada</item>
        <item quantity="other">%1$d selecionadas</item>
    </plurals>
    <plurals name="list_selection_action_mode_delete_in_progress">
        <item quantity="one">Excluindo %1$d música…</item>
        <item quantity="other">Excluindo %1$d músicas…</item>
    </plurals>
    <plurals name="list_selection_action_mode_delete_failed">
        <item quantity="one">Falha ao excluir %1$d música</item>
        <item quantity="other">Falha ao excluir %1$d músicas</item>
    </plurals>
    <plurals name="list_selection_action_mode_delete_confirmation">
        <item quantity="one">Tem certeza que deseja excluir %1$d música?</item>
        <item quantity="other">Tem certeza que deseja excluir %1$d músicas?</item>
    </plurals>

    <!--  Song  -->
    <string name="song_missing_title">Preencha o título</string>
    <string name="song_missing_artist">Preencha o(a) artista</string>
    <string name="song_missing_lyrics">Preencha a letra</string>
    <string name="lyrics_selection_mark_text">Marcar texto</string>
    <string name="lyrics_selection_clear_markings_text">Limpar marcações</string>
    <string name="lyrics_selection_dialog_title">Selecione uma cor</string>
    <string name="song_text_size">Tamanho da fonte</string>

    <!--  Imported songs  -->
    <string name="import_no_data_received">Nenhum arquivo selecionado</string>
    <string name="import_importing">Importando músicas…</string>
    <string name="import_successful_message">Músicas importadas com sucesso</string>
    <string name="import_partial_failure_message">Músicas importadas. %1$d falhas</string>
    <string name="import_failure_message">Falha ao importar as músicas</string>
    <plurals name="import_partial_failure_message">
        <item quantity="one">Músicas importadas. %1$d falha</item>
        <item quantity="other">Músicas importadas. %1$d falhas</item>
    </plurals>
    <plurals name="import_duplicated_songs_message">
        <item quantity="one">Foi encontrada uma música duplicada. Deseja mantê-las?</item>
        <item quantity="other">Foram encontradas músicas duplicadas. Deseja mantê-las?</item>
    </plurals>
    <plurals name="import_duplicated_songs_kept">
        <item quantity="one">Música duplicada mantida</item>
        <item quantity="other">Músicas duplicadas mantidas</item>
    </plurals>
    <plurals name="import_duplicated_songs_deleted">
        <item quantity="one">Música duplicada excluída</item>
        <item quantity="other">Músicas duplicadas excluídas</item>
    </plurals>
    <string name="import_duplicated_songs_delete_failure">Falha ao excluir músicas duplicadas.</string>

    <!--  Edit song  -->
    <string name="add_song">Adicionar música</string>
    <string name="add_song_title">Título</string>
    <string name="add_song_artist">Artista</string>
    <string name="add_song_lyrics">Letra</string>
    <string name="add_song_save_confirmation">Tem certeza que deseja salvar?</string>
    <string name="add_song_saving">Salvando…</string>
    <string name="add_song_failed_to_save">Falha ao salvar</string>
    <string name="edit_song">Editar</string>
    <string name="edit_song_title">Editar música</string>
    <string name="song_is_duplicated_message">Essa música já foi encontrada no seu dispositivo. Deseja salvar mesmo assim?</string>

</resources>