<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_nav_graph"
    app:startDestination="@id/songListFragment">

    <fragment
        android:id="@+id/songListFragment"
        android:name="br.com.kamarugosan.songlist.ui.activity.main.list.SongListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_song_list">
        <action
            android:id="@+id/action_songListFragment_to_songFragment"
            app:destination="@id/songFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/songListFragment" />
        <action
            android:id="@+id/action_songListFragment_to_addSongFragment"
            app:destination="@id/addSongFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/songListFragment" />
    </fragment>
    <fragment
        android:id="@+id/songFragment"
        android:name="br.com.kamarugosan.songlist.ui.activity.main.song.SongFragment"
        android:label="@string/all_song"
        tools:layout="@layout/fragment_song" />
    <fragment
        android:id="@+id/addSongFragment"
        android:name="br.com.kamarugosan.songlist.ui.activity.main.add.AddSongFragment"
        android:label="@string/add_song"
        tools:layout="@layout/fragment_add_song" >
        <action
            android:id="@+id/action_addSongFragment_to_songFragment"
            app:destination="@id/songFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/songListFragment" />
    </fragment>
</navigation>